Define type: "integer"
Part of #4038

--- a/versions/3.0.4.md
+++ b/versions/3.0.4.md
@@ -173,7 +173,7 @@ Note that no aspect of implicit connection resolution changes how [URLs are reso
 ### Data Types
 
 Data types in the OAS are based on the types supported by the [JSON Schema Specification Wright Draft 00](https://tools.ietf.org/html/draft-wright-json-schema-00#section-4.2).
-Note that `integer` as a type is also supported and is defined as a JSON number without a fraction or exponent part.
+Note that `integer` as a type is also supported and is defined as a JSON number that is a multiple of 1.
 `null` is not supported as a type (see [`nullable`](#schema-nullable) for an alternative solution).
 Models are defined using the [Schema Object](#schema-object), which is an extended subset of JSON Schema Specification Wright Draft 00.
 
@@ -2662,7 +2662,7 @@ The following keywords are taken directly from the JSON Schema definition and fo
 
 The following keywords are taken from the JSON Schema definition but their definitions were adjusted to the OpenAPI Specification.
 
-* type - Value MUST be a string. Multiple types via an array are not supported.
+* type - Value MUST be a string. Multiple types via an array are not supported. `type: "integer"` is supported as a shortcut for `type: "number", multipleOf: 1`.
 * allOf - Inline or referenced schema MUST be of a [Schema Object](#schema-object) and not a standard JSON Schema.
 * oneOf - Inline or referenced schema MUST be of a [Schema Object](#schema-object) and not a standard JSON Schema.
 * anyOf - Inline or referenced schema MUST be of a [Schema Object](#schema-object) and not a standard JSON Schema.
