Example link to learn site

--- a/versions/3.0.4.md
+++ b/versions/3.0.4.md
@@ -2019,7 +2019,7 @@ The key value used to identify the Path Item Object is an expression, evaluated 
 
 | Field Pattern                                 |                Type                 | Description                                                                                                                                             |
 | --------------------------------------------- | :---------------------------------: | ------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| <a name="callback-expression"></a>{expression} | [Path Item Object](#path-item-object) | A Path Item Object used to define a callback request and expected responses. A [complete example](../examples/v3.0/callback-example.yaml) is available. |
+| <a name="callback-expression"></a>{expression} | [Path Item Object](#path-item-object) | A Path Item Object used to define a callback request and expected responses. A [complete example](https://learn.openapis.org/examples/v3.0/callback-example.html) is available. |
 
 This object MAY be extended with [Specification Extensions](#specification-extensions).
 
