Examples on learn site

--- a/versions/3.1.1.md
+++ b/versions/3.1.1.md
@@ -312,7 +312,7 @@ This is the root object of the [OpenAPI document](#openapi-description).
 | <a name="oas-json-schema-dialect"></a> jsonSchemaDialect |                           `string`                            | The default value for the `$schema` keyword within [Schema Objects](#schema-object) contained within this OAS document. This MUST be in the form of a URI.                                                                                                                                                                                                                                                                                                                                                                                               |
 | <a name="oas-servers"></a>servers                      |               [[Server Object](#server-object)]                | An array of Server Objects, which provide connectivity information to a target server. If the `servers` property is not provided, or is an empty array, the default value would be a [Server Object](#server-object) with a [url](#server-url) value of `/`.                                                                                                                                                                                                                                                                                              |
 | <a name="oas-paths"></a>paths                          |                 [Paths Object](#paths-object)                  | The available paths and operations for the API.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
-| <a name="oas-webhooks"></a>webhooks                    |      Map[`string`, [Path Item Object](#path-item-object)]       | The incoming webhooks that MAY be received as part of this API and that the API consumer MAY choose to implement. Closely related to the `callbacks` feature, this section describes requests initiated other than by an API call, for example by an out of band registration. The key name is a unique string to refer to each webhook, while the (optionally referenced) Path Item Object describes a request that may be initiated by the API provider and the expected responses. An [example](../examples/v3.1/webhook-example.yaml) is available. |
+| <a name="oas-webhooks"></a>webhooks                    |      Map[`string`, [Path Item Object](#path-item-object)]       | The incoming webhooks that MAY be received as part of this API and that the API consumer MAY choose to implement. Closely related to the `callbacks` feature, this section describes requests initiated other than by an API call, for example by an out of band registration. The key name is a unique string to refer to each webhook, while the (optionally referenced) Path Item Object describes a request that may be initiated by the API provider and the expected responses. An [example](https://learn.openapis.org/examples/v3.1/webhook-example.html) is available. |
 | <a name="oas-components"></a>components                |            [Components Object](#components-object)             | An element to hold various schemas for the document.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
 | <a name="oas-security"></a>security                    |  [[Security Requirement Object](#security-requirement-object)]  | A declaration of which security mechanisms can be used across the API. The list of values includes alternative Security Requirement Objects that can be used. Only one of the Security Requirement Objects need to be satisfied to authorize a request. Individual operations can override this definition. To make security optional, an empty security requirement (`{}`) can be included in the array.                                                                                                                                               |
 | <a name="oas-tags"></a>tags                            |                  [[Tag Object](#tag-object)]                   | A list of tags used by the document with additional metadata. The order of the tags can be used to reflect on their order by the parsing tools. Not all tags that are used by the [Operation Object](#operation-object) must be declared. The tags that are not declared MAY be organized randomly or based on the tools' logic. Each tag name in the list MUST be unique.                                                                                                                                                                               |
@@ -2083,7 +2083,7 @@ To describe incoming requests from the API provider independent from another API
 
 | Field Pattern                                 |                Type                 | Description                                                                                                                                             |
 | --------------------------------------------- | :---------------------------------: | ------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| <a name="callback-expression"></a>{expression} | [Path Item Object](#path-item-object) | A Path Item Object used to define a callback request and expected responses. A [complete example](../examples/v3.0/callback-example.yaml) is available. |
+| <a name="callback-expression"></a>{expression} | [Path Item Object](#path-item-object) | A Path Item Object used to define a callback request and expected responses. A [complete example](https://learn.openapis.org/examples/v3.0/callback-example.html) is available. |
 
 This object MAY be extended with [Specification Extensions](#specification-extensions).
 
