Back out part of the change
in favor of #4045

--- a/versions/3.0.4.md
+++ b/versions/3.0.4.md
@@ -173,7 +173,7 @@ Note that no aspect of implicit connection resolution changes how [URLs are reso
 ### Data Types
 
 Data types in the OAS are based on the types supported by the [JSON Schema Specification Wright Draft 00](https://tools.ietf.org/html/draft-wright-json-schema-00#section-4.2).
-Note that `integer` as a type is also supported and is defined as a JSON number that is a multiple of 1.
+Note that `integer` as a type is also supported and is defined as a JSON number without a fraction or exponent part.
 `null` is not supported as a type (see [`nullable`](#schema-nullable) for an alternative solution).
 Models are defined using the [Schema Object](#schema-object), which is an extended subset of JSON Schema Specification Wright Draft 00.
 
