Additional example for "raw JSON"

--- a/versions/3.1.1.md
+++ b/versions/3.1.1.md
@@ -1591,6 +1591,12 @@ content:
   application/octet-stream: {}
 ```
 
+```yaml
+# arbitrary JSON without constraints beyond being well-formed:
+content:
+  application/json: {}
+```
+
 These examples apply to either input payloads of file uploads or response payloads.
 
 A `requestBody` for submitting a file in a `POST` operation may look like the following example:
