Feedback from @handrews

--- a/versions/3.1.1.md
+++ b/versions/3.1.1.md
@@ -267,8 +267,8 @@ The following table shows how to migrate from OAS 3.0 binary data descriptions, 
 
 | OAS < 3.1                            | OAS 3.1                                                                          | Comments                                                                                |
 | ------------------------------------ | -------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------- |
-| `type: string`<br /><code style="white-space:nowrap">format: binary</code> | <code style="white-space:nowrap">contentMediaType: image/png</code> | if redundant, can be omitted, often resulting in an empty [Schema Object](#schema-object) |
-| `type: string`<br />`format: byte` | `type: string`<br />`contentMediaType: image/png`<br />`contentEncoding: base64` | note that `base64url` can be used to avoid re-encoding the base64 string to be URL-safe |
+| <code style="white-space:nowrap">type: string</code><br /><code style="white-space:nowrap">format: binary</code> | <code style="white-space:nowrap">contentMediaType: image/png</code> | if redundant, can be omitted, often resulting in an empty [Schema Object](#schema-object) |
+| <code style="white-space:nowrap">type: string</code><br /><code style="white-space:nowrap">format: byte</code> | <code style="white-space:nowrap">type: string</code><br /><code style="white-space:nowrap">contentMediaType: image/png</code><br /><code style="white-space:nowrap">contentEncoding: base64</code> | note that `base64url` can be used to avoid re-encoding the base64 string to be URL-safe |
 
 ### Rich Text Formatting
 
@@ -1592,7 +1592,7 @@ content:
 ```
 
 ```yaml
-# arbitrary JSON without constraints beyond being well-formed:
+# arbitrary JSON without constraints beyond being syntactically valid:
 content:
   application/json: {}
 ```
